3ra modific, solo resta hamburguesa

--- a/scss/complementos/_header.scss
+++ b/scss/complementos/_header.scss
@@ -154,7 +154,7 @@
         transition: 0.5s;
       }
       .nav__toggle {
-        color: white;
+        color: $color-blanco;
         background: none;
         border: none;
         font-size: 5.6rem;
