--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ body {
         color: #034574;
         transition: 0.5s; }
       .header .nav .nav__toggle {
-        color: white;
+        color: #eeeeee;
         background: none;
         border: none;
         font-size: 5.6rem;
@@ -208,8 +208,8 @@ body {
   display: flex;
   border-radius: 3rem;
   padding: 5rem;
-  height: 20rem;
-  width: 20rem; }
+  height: 30rem;
+  width: 30rem; }
 
 .aboutme .aboutme__me {
   margin: 2rem;
@@ -274,10 +274,11 @@ body {
     color: #034574; }
   .aboutme .aboutme__img {
     display: flex;
-    border-radius: 3rem;
-    padding: 5rem;
+    align-content: center;
+    width: 50rem;
     height: 50rem;
-    width: 50rem; }
+    margin-top: 12rem;
+    margin-right: -30rem; }
   .aboutme .aboutme__me {
     margin: 5rem;
     padding: 3rem;
@@ -815,7 +816,7 @@ body {
       display: flex;
       justify-content: center;
       font-size: 5rem;
-      padding: 3rem;
+      padding: 5rem;
       color: #034574;
       text-transform: uppercase; }
     .GBR .GBR__title:hover {
@@ -1170,7 +1171,7 @@ body {
       font-family: recursive;
       text-align: center;
       transition: transform 1.6s;
-      transform: translate(0%, 520%); }
+      transform: translate(50%, 650%); }
     .main .imgmenu .img__link--axis:hover {
       transform: translateY(255px); }
     .main .imgmenu .imgmenu__img1 {
