--- a/scss/complementos/_footer.scss
+++ b/scss/complementos/_footer.scss
@@ -9,6 +9,7 @@
   font-weight: bold;
   font-family: cursive;
   padding: 3rem;
+  font-size: 1rem;
 }
 
 //        T A B L E T     M O D E                     //
