--- a/scss/pages/gbr.scss
+++ b/scss/pages/gbr.scss
@@ -1,4 +1,6 @@
 .GBR {
+  display: flex;
+  flex-direction: column;
   .GBR__title {
     display: flex;
     justify-content: center;
@@ -16,6 +18,12 @@
     font-size: 1.6rem;
     display: flex;
     justify-content: center;
+    align-content: center;
+  }
+  .GBR__img {
+    display: flex;
+    justify-content: center;
+    align-content: center;
   }
   .hr {
     border: 0.5rem solid;
