--- a/scss/pages/japan.scss
+++ b/scss/pages/japan.scss
@@ -1,4 +1,7 @@
 .Japan {
+  display: flex;
+  flex-direction: column;
+  padding: 3rem;
   .Japan__title {
     display: flex;
     justify-content: center;
@@ -16,6 +19,7 @@
     font-size: 1.6rem;
     display: flex;
     justify-content: center;
+    padding: 3rem;
   }
   .hr {
     border: 0.5rem solid;
