--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,7 +10,7 @@ $color-botonera2: #0c0c81;
 $color-usa: #5f9ea0;
 $color-gbr: #008000;
 $color-fra: #2222db;
-$color-sov: #f12828;
+$color-sov: #7e1212a2;
 $color-ger: #1a1919;
 $color-jap: #e2e215;
 $color-ita: #81f011;
