--- a/scss/complementos/_header.scss
+++ b/scss/complementos/_header.scss
@@ -3,6 +3,8 @@
   .header {
     background-color: $color-primary;
     height: 10rem;
+    top: 0;
+    left: 0;
     .nav {
       font-size: 2.1rem;
       display: flex;
@@ -134,18 +136,16 @@
       margin-right: 20;
       list-style: none;
       position: fixed;
-      left: 0;
       top: 6.5rem;
       width: 100%;
-      gap: 3rem;
       padding: 0;
       height: calc(100% - 6rem);
       overflow-y: auto;
       left: 100%;
       transition: left 0.5s;
-
       z-index: 10;
     }
+
     .nav-menu-item {
       font-size: 2.6rem;
       padding: 0.8rem 0.12rem;
